[gd_scene load_steps=5 format=3 uid="uid://dvabagf4huwm6"]

[ext_resource type="PackedScene" uid="uid://d3uf2qesl3svc" path="res://models/enforcer/Enforcer.glb" id="1_iw8lw"]
[ext_resource type="Script" path="res://prefabs/enforcer/enforcer.gd" id="2_awpca"]
[ext_resource type="PackedScene" uid="uid://ew1y5u8lyyoc" path="res://prefabs/white_noise_3D.tscn" id="3_k2io5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dhp6y"]
radius = 0.7

[node name="Enforcer" instance=ExtResource("1_iw8lw")]
collision_layer = 4
collision_mask = 19
script = ExtResource("2_awpca")

[node name="SpotLight3D" type="SpotLight3D" parent="Node/Torso2" index="1"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1.77876, -0.532987)
light_color = Color(1, 0, 0, 1)
light_energy = 5.0
light_cull_mask = 4294967287
shadow_enabled = true
distance_fade_enabled = true
spot_range = 6.0
spot_attenuation = 0.5
spot_angle = 30.0
spot_angle_attenuation = 0.5

[node name="EnforcerBody" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_dhp6y")

[node name="EnforcerNoise" type="AudioStreamPlayer3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)

[node name="WhiteNoise3d" parent="." index="3" instance=ExtResource("3_k2io5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
autoplay = true
max_distance = 15.0
doppler_tracking = 2

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="4"]
avoidance_enabled = true

[node name="DetectionRay" type="RayCast3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
target_position = Vector3(0, 0, -100)
collision_mask = 19

[connection signal="navigation_finished" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_navigation_finished"]
